# genro-pantry

./: CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: api.md  architecture.md  changelog.md  conf.py  design-philosophy.md  getting-started.md  index.md  usage.md
src/pantry/: __init__.py  _discovery.py  _probe.py  _registry.py
tests/: __init__.py  test_decorator.py  test_discovery.py  test_lazy_import.py  test_probe.py  test_registry.py  test_simulate_missing.py  test_singleton.py
